--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        New Page About Me
+        <title> New Page About Me  </title>
     </head>
     <body>
         <h1> JAGADEESH PONNAM</h1>
+        <h1>Kansas City Museum</h1>
+
+        <p>
+            The Kansas City Museum is located in Kansas City, Missouri, United States. In 1910, the site was built by lumber baron and civic leader Robert A. 
+            Long as his <b>private family estate</b>, with the four-story <b>historic Beaux-Arts</b> style mansion named Corinthian Hall.
+             In <b>1940</b>, the site was donated by Long's heirs to become a public museum.
+             Seventy-five years later, it began extensive renovation
+        </p>
     </body>
 </html>
