--- a/AboutMe.html
+++ b/AboutMe.html
@@ -13,7 +13,7 @@
             during her Christmas holidays with the Royal Family at their Sandringham estate in Norfolk, 
             England, decides to end her decade-long marriage to Prince Charles.
         </p>
-        <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-Jagadeeshponnam/blob/a828a5ed972a95fd81ce959a65ed6feb4b2e57ae/Spancer1.jpg"></a>
+        <img src="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-Jagadeeshponnam/blob/main/Spancer1.jpg?raw=true" alt="Spacer" width="700" height="1000"> 
 
 
     </body>
