--- a/index.html
+++ b/index.html
@@ -5,13 +5,36 @@
     </head>
     <body>
         <h1> JAGADEESH PONNAM</h1>
-        <h1>Kansas City Museum</h1>
+        <h2>Salar Jung Museum</h2>
 
         <p>
-            The Kansas City Museum is located in Kansas City, Missouri, United States. In 1910, the site was built by lumber baron and civic leader Robert A. 
-            Long as his <b>private family estate</b>, with the four-story <b>historic Beaux-Arts</b> style mansion named Corinthian Hall.
-             In <b>1940</b>, the site was donated by Long's heirs to become a public museum.
-             Seventy-five years later, it began extensive renovation
+            The <b>Salar Jung Museum</b> is an art museum located at Dar-ul-Shifa, 
+            on the southern bank of the <b>Musi River</b> in the city of Hyderabad, Telangana, India. 
+            It is one of the notable <b>National Museums of India</b>.
+            It has a collection of sculptures, paintings, carvings, textiles, manuscripts, ceramics, metallic artifacts,
+             carpets, clocks, and furniture from Japan, China, Burma, Nepal, India, Persia, Egypt, Europe, and North America.
+             It is one of the largest museums in the world.
         </p>
-    </body>
+        <hr>
+            <h3>Directions to the museum</h3>
+            <p>
+                The airport that is closest to the museum is Rajiv Gandhi International Airport, Hyderabad.
+                <ol>
+                    <li>You can take the bus to AC Guards from airport.</li>
+                    <li>Take the walk to Lakdi-ka-pul.</li>
+                    <li>take the subway to Osmania Medical College, then take the walk to Salar Jung Museum.</li>
+                    <li>Alternatively, you can book the taxi direct to Salar Jung Museum.</li>
+                        
+                        
+                </ol>
+                The places near by the museum.
+                <ul>
+                    <li>The historic Charminar</li>
+                    <li>Mecca Masjid</li>
+                    <li>The Osmania General Hospital</li>
+                </ul>
+            </p>
+            <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-Jagadeeshponnam/blob/6c64a2f980b0dad3de8bb568dc296eeb54d47e07/AboutMe.html">Click here to go</a>
+
+            </body>
 </html>
