--- a/bonus.html
+++ b/bonus.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        
+    </head>
     <body>
     <h1 style="color:khaki ;">Poughkeepsie Perry</h1>
     <p>
